# 21cmLSTM

./: 21cmLSTM.def  LICENSE  README.md  requirements.txt  setup.cfg  setup.cfg.rtf  setup.py
Global21cmLSTM/: __init__.py  emulator_21cmGEM.py  emulator_ARES.py  emulator_foreground.py  emulator_foreground_LST1.py  emulator_foreground_LST2.py  emulator_foreground_LST3.py  emulator_foreground_LST4.py  emulator_foreground_LST5.py  eval_21cmGEM.py  eval_ARES.py  eval_foreground.py  eval_foreground_LST1.py  eval_foreground_LST2.py  eval_foreground_LST3.py  eval_foreground_LST4.py  eval_foreground_LST5.py  preprocess_21cmGEM.py  preprocess_ARES.py  preprocess_foreground.py  wrapper.py  wrapper_LST.py
Global21cmLSTM/models/: train_maxs_21cmGEM.txt  train_maxs_ARES.txt  train_mins_ARES.txt
cosmoLSTM/: __init__.py  emulator.py  eval.py  preprocess.py
cosmoLSTM/models/: train_mins.txt
tutorials/: evaluate.ipynb  evaluate.py  train.ipynb
