[metadata]
name = 21cmLSTM
version = 1.0.0
description = 21cmLSTM: A memory-based emulator of the global 21 cm signal with unprecedented accuracy and speed
long_description = file: README.rst
author = Johnny Dorigo Jones
author_email = johnny.dorigojones@colorado.edu
license = MIT
url = https://github.com/johnnydorigojones/21cmLSTM
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages=find:
python_requires = >= 3.6
include_package_data = True
install_requires =
    jupyter
    h5py
    matplotlib
    numpy
    tensorflow
    tqdm

[options.package_data]
* = *.rst, cosmoLSTM/dataset_21cmLSTM.h5, cosmoLSTM/models*
