[metadata]
name = Global21cmLSTM
version = 1.0.0
description = 21cmLSTM: A Fast Memory-based Emulator of the Global 21 cm Signal with Unprecedented Accuracy
long_description = file: README.md
author = Johnny Dorigo Jones
author_email = johnny.dorigojones@colorado.edu
license = MIT
url = https://github.com/jdorigojones/21cmLSTM
classifiers =
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages=find:
python_requires = >= 3.6
include_package_data = True
install_requires =
    jupyter
    h5py
    matplotlib
    numpy
    tensorflow

[options.package_data]
* = *.md, Global21cmLSTM/dataset_21cmGEM.h5, Global21cmLSTM/dataset_ARES.h5, Global21cmLSTM/models*
